change: restructured directory structure to aims to put package.json at root of project. The reason is because the major of NodeJS security products has this restriction for a correct analysis of sources. Change: docker-compose to adapt to new structure. Add: New readme in attacks folder to explains what contain this folder.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   vulnerable_node:
     restart: always
-    build: ./web
+    build: .
     ports:
       - "3000:3000"
 #    links:
