--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,10 @@ sonar.organization=agigleux
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.log.level=DEBUG
+
+sonar.verbose=true
+
+sonar.showProfiling=true
+
