--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,9 +11,6 @@ sonar.organization=agigleux
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
-sonar.log.level=DEBUG
-
-sonar.verbose=true
-
-sonar.showProfiling=true
-
+#sonar.log.level=DEBUG
+#sonar.verbose=true
+#sonar.showProfiling=true
