--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ variables:
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
 
+
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
 
@@ -38,8 +39,14 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+
     - task: CmdLine@2
       displayName: 'WhiteSource Scan'
       enabled: true
       continueOnError: false
 
+      env: {
+      WS_APIKEY: "$(WS_ApiKey)", # This is taken from AZDO secrects
+      WS_USERKEY: "$(WS_UserKey)", # This is taken from AZDO secrects
+      WS_WSS_URL: "$(WS_WssUrl)", # This is taken from AZDO secrects
+    }
