Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,8 +51,8 @@ stages:
        WS_WSS_URL: 'https://saas.whitesourcesoftware.com',
       # WS_PRODUCTNAME: AZDO_$(System.TeamProject),
       # WS_PROJECTNAME: $(Build.Repository.Name)_$(Build.SourceBranchName)
-      WS_PRODUCTNAME:'Dcker Product from azur',
-      WS_PROJECTNAME:'vulnerable-node'
+      WS_PRODUCTNAME:Docker Product from azur,
+      WS_PROJECTNAME:vulnerable-node
     }
 
 
