--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,9 +46,9 @@ stages:
         java -jar wss-unified-agent.jar
       env:
         WS_APIKEY: 096db8ec-fefa-4e58-b9a0-e3413373d807
-        WS_WSS_URL: https://saas.whitesourcesoftware.com/agent
+        #WS_WSS_URL: https://saas.whitesourcesoftware.com/agent
         WS_PRODUCTNAME: AZDO_$(System.TeamProject)
-        WS_PROJECTNAME: AZDO_$(System.TeamProject)
+        #WS_PROJECTNAME: AZDO_$(System.TeamProject)
         #WS_PROJECTNAME: $(Build.BuildId)
         #WS_PROJECTNAME: $(System.DefinitionId)
         #WS_PROJECTNAME: $(Build.Repository.Name)_$(Build.SourceBranchName )
