--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^16.0.1",
     "ejs": "^2.4.2",
     "ejs-locals": "^1.0.2",
     "express": "~4.13.1",
