--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: 2.7 #test
 
       - name: Install Ruby dependencies
         run: |
