--- a/.github/dependabot1.yml
+++ b/.github/dependabot1.yml
@@ -1,13 +1,16 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
+name: Dependabot
+on:
+  pull_request:
+    types: [opened, synchronize]
 
-version: 2
-updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
-    schedule:
-      interval: "daily"
-          target-branch: "rahiCICD-patch-1"
+jobs:
+  dependabot:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
+      - name: Run Dependabot
+        uses: dependabot/dependabot-core@v0.161.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
